Ingress/demos/src/backend-webapi.yaml
kind: Service
apiVersion: v1
metadata:
  name: demowebapi-svc
spec:
  selector:
    app: demowebapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demowebapi
  template:
    metadata:
      labels:
        app: demowebapi
    spec:
      containers:
        - name: demowebapi
          image: "workshopdev/webapi:net5-v1"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
                path: /health
                port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 80
          resources:
             requests:
               memory: 256Mi
               cpu: 100m
             limits: 
               memory: 512Mi
               cpu: 250m
