Ingress/demos/src/frontend-webapp.yaml
kind: Service
apiVersion: v1
metadata:
  name: demowebapp-svc
spec:
  selector:
    app: demowebapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demowebapp
  labels:
    app: demowebapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demowebapp
  template:
    metadata:
      labels:
        app: demowebapp
    spec:
      containers:
        - name: demowebapp
          image: "workshopdev/webapp:net5-v1"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
                path: /health
                port: 80
            initialDelaySeconds: 1
            periodSeconds: 5
          readinessProbe:
            httpGet:
                path: /readiness
                port: 80
            initialDelaySeconds: 3
            periodSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits: 
              memory: 512Mi
              cpu: 250m
          ports:
            - name: http
              containerPort: 80
