Ingress/demos/src/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: "workshop-rrp.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demowebapp
            port: 
              number: 80
