Ingress/demos/src/netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demowebapi-allow-demowebapp
spec:
  podSelector: 
    matchLabels:
        app: demowebapi
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: demowebapp
